src/test/ui/consts/const-eval/mod-static-with-const-fn.stderr
error[E0019]: static contains unimplemented expression type
  --> $DIR/mod-static-with-const-fn.rs:18:5
   |
LL |     *FOO.0.get() = 5;
   |     ^^^^^^^^^^^^^^^^

error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/mod-static-with-const-fn.rs:21:5
   |
LL |     foo();
   |     ^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0019.
For more information about an error, try `rustc --explain E0015`.
